<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World</string>
    <string name="app_name">Civic Reporter</string>

    <string name="title_section1">Home</string>
    <string name="title_section2">New Complaint</string>
    <string name="title_section3">View Complaint</string>
    <string name="title_section4">Settings</string>
    <string name="title_section5">Feedback</string>
    <string name="title_section6">Rate Us</string>
    <string name="title_section7">About Us</string>
    <string name="title_section8">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="cannot">Cannot</string>
    <string name="album_name">Civic Reporter</string>
    <string name="signup"><u>Not a member? Sign up</u></string>
    <string name="policy"><u>Privacy Policy</u></string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_activity22">MainActivity22Activity</string>
    <string name="title_activity_share__feedback">Share_Feedback</string>

    <string name="app_id">1595322760705556</string>
    <string name="title_activity_email">Email</string>
    <string name="title_activity_register">Register</string>
    <string name="spinner_title">Pick Your City</string>
    <string name="spinner_titlee">Select Your Area</string>

</resources>
