<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--
                <RelativeLayout
                    android:id="@+id/google_plus_profile_layout"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@drawable/logo"
                    android:clipToPadding="true"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/google_plus_profile_pic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp" />

                    <TextView
                        android:id="@+id/google_plus_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/google_plus_profile_pic"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_toEndOf="@id/google_plus_profile_pic"
                        android:layout_toRightOf="@id/google_plus_profile_pic"
                        android:fontFamily="roboto-regular"
                        android:text="Sign in"
                        android:textColor="#ffffff"
                        android:textSize="16sp" />
                </RelativeLayout>
        -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:background="#ffffff"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/navigation_drawer_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_action_home" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:layout_marginTop="8dp"
                    android:background="#ffffff"
                    android:fontFamily="roboto-regular"
                    android:text="@string/title_section1"
                    android:textColor="#757575"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/navigation_newcomplaint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/image_fac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_action_assignment" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:layout_marginTop="8dp"
                    android:background="#ffffff"
                    android:fontFamily="roboto-regular"
                    android:text="@string/title_section2"
                    android:textColor="#757575"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/navigation_viewcomplaint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/image_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_action_history" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:layout_marginTop="8dp"
                    android:background="#ffffff"
                    android:fontFamily="roboto-regular"
                    android:text="@string/title_section3"
                    android:textColor="#757575"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="3dp"
                android:background="#f2f2f2"
                android:orientation="horizontal" />

            <LinearLayout
                android:id="@+id/navigation_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/image_acc"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="10dp"
                    android:src="@android:drawable/ic_menu_preferences" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:layout_marginTop="8dp"
                    android:background="#ffffff"
                    android:fontFamily="roboto-regular"
                    android:text="@string/title_section4"
                    android:textColor="#757575"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/navigation_drawer_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_action_feedback" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:layout_marginTop="7dp"
                    android:background="#ffffff"
                    android:fontFamily="roboto-regular"
                    android:text="@string/title_section5"
                    android:textColor="#757575"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/navigation_drawer_rate_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_action_important" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:layout_marginTop="7dp"
                    android:background="#ffffff"
                    android:fontFamily="roboto-regular"
                    android:text="@string/title_section6"
                    android:textColor="#757575"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/navigation_about_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/imageV"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_action_account" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:layout_marginTop="7dp"
                    android:background="#ffffff"
                    android:fontFamily="roboto-regular"
                    android:text="@string/title_section7"
                    android:textColor="#757575"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/navigation_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/navigation_logout_imageview"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_logout" />

                <TextView
                    android:id="@+id/navigation_logout_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:layout_marginTop="7dp"
                    android:background="#ffffff"
                    android:fontFamily="roboto-regular"
                    android:text="@string/title_section8"
                    android:textColor="#757575"
                    android:textSize="15sp" />
            </LinearLayout>
            -->

        </LinearLayout>
    </LinearLayout>

</ScrollView>